EPMDJ-5477: updated tests to run blocks on single agent and SG t2c page
Issue: EPMDJ-5477

--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/action-section/action-section.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/action-section/action-section.module.scss
@@ -32,8 +32,13 @@
     color: map-get($primary-blue, default);
   }
 
-  &__zero-value {
+  &__no-value {
     font-size: 20px;
     line-height: 32px;
+    color: map-get($monochrome, black);
+  }
+
+  &__tooltip-message {
+    text-align: center;
   }
 }
