EPMDJ-5543: update action-section component and legend
Issue: EPMDJ-5543, EPMDJ-5540, EPMDJ-5578

--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/action-section/action-section.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/action-section/action-section.module.scss
@@ -5,8 +5,11 @@
   color: map-get($monochrome, default);
 
   &__action {
-    padding-left: 16px;
-    padding-right: 40px;
+    margin-left: 16px;
+    margin-right: 40px;
+    font-size: 20px;
+    line-height: 32px;
+    color: map-get($monochrome, black);
   }
 
   &__action-name {
@@ -14,28 +17,6 @@
     line-height: 16px;
     font-family: $semibold-font;
     text-transform: uppercase;
-  }
-
-  &__count {
-    font-size: 20px;
-    line-height: 32px;
-    color: map-get($monochrome, black);
-    cursor: pointer;
-
-    &:hover {
-      color: map-get($primary-blue, medium-tint);
-    }
-  }
-
-  &__link-icon {
-    margin-left: 4px;
-    color: map-get($primary-blue, default);
-  }
-
-  &__no-value {
-    font-size: 20px;
-    line-height: 32px;
-    color: map-get($monochrome, black);
   }
 
   &__tooltip-message {
