--- a/src/modules/tests-to-run/tests-to-run-list/tests-to-run-list.module.scss
+++ b/src/modules/tests-to-run/tests-to-run-list/tests-to-run-list.module.scss
@@ -2,8 +2,10 @@
 
 .tests-to-run-list {
   display: grid;
+  grid-template-rows: repeat(3, max-content);
   gap: 16px;
   width: 100%;
+  height: 100%;
 
   &__title {
     font-size: 12px;
