--- a/src/layouts/app-layout/app-layout.module.scss
+++ b/src/layouts/app-layout/app-layout.module.scss
@@ -21,7 +21,7 @@
   &__header {
     height: 50px;
     width: 100%;
-    border-bottom: 1px solid map-get($color-palette, light-blue);
+    border-bottom: 1px solid map-get($monochrome, medium-tint);
     flex-shrink: 0;
   }
 
