--- a/src/modules/unlocking-system-settings-form-modal/unlocking-system-settings-form-modal.module.scss
+++ b/src/modules/unlocking-system-settings-form-modal/unlocking-system-settings-form-modal.module.scss
@@ -5,7 +5,7 @@
 
   &__header-icon {
     display: flex;
-    color: map-get($color-palette, red100);
+    color: map-get($red, default);
   }
 
   &__content {
