--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/coverage-cell/coverage-cell.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/coverage-cell/coverage-cell.module.scss
@@ -12,15 +12,15 @@
 
     &--type {
       &--success {
-        color: map-get($color-palette, green100);
+        color: map-get($green, default);
       }
 
       &--warning {
-        color: map-get($color-palette, yellow50);
+        color: map-get($orange, default);
       }
 
       &--error {
-        color: map-get($color-palette, red100);
+        color: map-get($red, default);
       }
     }
   }
