--- a/src/layouts/login-layout/login-layout.module.scss
+++ b/src/layouts/login-layout/login-layout.module.scss
@@ -8,7 +8,7 @@
   &__sidebar {
     height: 100%;
     width: 480px;
-    background-color: map-get($color-palette, white);
+    background-color: map-get($monochrome, white);
     box-shadow: 0 0 40px 0 rgba(15, 36, 52, 0.15);
   }
 
