--- a/src/modules/breadcrumbs/breadcrumbs.module.scss
+++ b/src/modules/breadcrumbs/breadcrumbs.module.scss
@@ -8,13 +8,13 @@
   :not(:last-child) {
     &:after {
       padding: 0 8px;
-      color: map-get($color-palette, black100);
+      color: map-get($monochrome, default);
       content: '/';
     }
   }
 
   &__crumb {
-    color: map-get($color-palette, blue100);
+    color: map-get($primary-blue, default);
     font-size: 12px;
     font-family: $semibold-font;
     cursor: pointer;
