--- a/src/modules/not-implemented-stub/not-implemented-stub.module.scss
+++ b/src/modules/not-implemented-stub/not-implemented-stub.module.scss
@@ -17,7 +17,7 @@
   &__instructions {
     margin-top: 8px;
     width: 400px;
-    color: $slate-gray;
+    color: map-get($monochrome, default);
     font-size: 14px;
     line-height: 24px;
     text-align: center;
