--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
@@ -17,9 +17,9 @@
     justify-content: center;
     height: 32px;
     width: 32px;
-    border: 1px solid map-get($color-palette, blue100);
+    border: 1px solid map-get($primary-blue, default);
     border-radius: 16px;
-    color: map-get($color-palette, blue100);
+    color: map-get($primary-blue, default);
     margin-left: 16px;
     cursor: pointer;
   }
