--- a/src/pages/agent-full-page/coverage-plugin/methods-sidebar/methods-sidebar.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/methods-sidebar/methods-sidebar.module.scss
@@ -8,12 +8,12 @@
   &__header {
     display: flex;
     align-items: center;
-    height: 63px;
-    border-bottom: 1px solid map-get($color-palette, light-blue);
+    height: 64px;
+    border-bottom: 1px solid map-get($monochrome, medium-tint);
     padding-left: 24px;
     font-size: 18px;
     line-height: 24px;
-    color: map-get($color-palette, black100);
+    color: map-get($monochrome, black);
 
     & > * {
       margin-right: 8px;
@@ -60,6 +60,6 @@
 
   &__method-descriptor {
     font-size: 12px;
-    color: $slate-gray;
+    color: map-get($monochrome, default);
   }
 }
