--- a/src/pages/agent-full-page/coverage-plugin/test-details/no-tests-stub/no-tests-stub.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/test-details/no-tests-stub/no-tests-stub.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: map-get($color-palette, black10);
+  color: map-get($monochrome, medium-tint);
 
   &__icon {
     margin-top: 110px;
@@ -14,7 +14,7 @@
     margin-top: 24px;
     font-size: 24px;
     line-height: 32px;
-    color: $slate-gray;
+    color: map-get($monochrome, default);
   }
 
   &__message {
@@ -23,6 +23,6 @@
     font-size: 14px;
     line-height: 24px;
     text-align: center;
-    color: $slate-gray;
+    color: map-get($monochrome, default);
   }
 }
