--- a/src/pages/agents-page/agents-table/actions-column/actions-column.module.scss
+++ b/src/pages/agents-page/agents-table/actions-column/actions-column.module.scss
@@ -1,7 +1,7 @@
 @import '~common/style-guide/index';
 
 .actions-column {
-  color: map-get($color-palette, blue100);
+  color: map-get($primary-blue, default);
 
   &__content {
     & > *:not(:first-child) {
