--- a/src/pages/settings-page/service-group-settings/general-settings-form/general-settings-form.module.scss
+++ b/src/pages/settings-page/service-group-settings/general-settings-form/general-settings-form.module.scss
@@ -4,8 +4,8 @@
   &__info-panel {
     height: 48px;
     padding: 0 24px;
-    background-color: map-get($color-palette, ultra-light-blue);
-    color: $slate-gray;
+    background-color: map-get($monochrome, light-tint);
+    color: map-get($monochrome, default);
     font-size: 14px;
     line-height: 24px;
   }
@@ -28,7 +28,7 @@
   }
 
   &__copy-button {
-    color: map-get($color-palette, blue100);
+    color: map-get($primary-blue, default);
     cursor: pointer;
   }
 
