EPMDJ-5596: Add tooltips for application sidebar
Issue: EPMDJ-5596

--- a/src/pages/agent-full-page/sidebar/sidebar.module.scss
+++ b/src/pages/agent-full-page/sidebar/sidebar.module.scss
@@ -1,6 +1,8 @@
 @import '~common/style-guide/index';
 
 .new-sidebar {
+  display: flex;
+  flex-direction: column;
   width: 80px;
   height: 100%;
   background-color: map-get($color-palette, ultra-light-blue);
