EPMDJ-5611: Update login page
Issue: EPMDJ-5611

--- a/src/layouts/login-layout/login-layout.module.scss
+++ b/src/layouts/login-layout/login-layout.module.scss
@@ -9,7 +9,7 @@
     height: 100%;
     width: 480px;
     background-color: map-get($monochrome, white);
-    box-shadow: 0 0 40px 0 rgba(15, 36, 52, 0.15);
+    box-shadow: 11px 0 40px 0 rgba(0, 0, 0, 0.1);
   }
 
   &__logo-wrapper {
