EPMDJ-5628: Disable settings if agent is offline or unregister
Issue: EPMDJ-5628

--- a/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
+++ b/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
@@ -106,13 +106,14 @@
 
   &__settings-button {
     display: flex;
-    align-items: center;
-    justify-content: center;
     height: 32px;
     width: 32px;
-    border: 1px solid map-get($primary-blue, default);
-    border-radius: 16px;
     color: map-get($primary-blue, default);
     cursor: pointer;
+
+    &--disabled {
+      opacity: 0.25;
+      pointer-events: none;
+    }
   }
 }
