EPMDJ-5503: Implement "Saved Time History" bar graph
Issue: EPMDJ-5503

--- a/src/common/style-guide/_colors.scss
+++ b/src/common/style-guide/_colors.scss
@@ -46,8 +46,9 @@ $orange: (
 );
 
 $data-visualization: (
-  card-progress-bar: #ccd0db,
-  build-cover: #62adfc,
+  scrollbar-thumb: #ccd0db,
+  coverage: #62adfc,
   overlapping: #4f8ac9,
   scope-cover: #aed4fd,
+  saved-time: #67d5b5,
 );
