--- a/src/pages/agent-full-page/coverage-plugin/overview/active-build-coverage-info/active-build-coverage-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/overview/active-build-coverage-info/active-build-coverage-info.module.scss
@@ -26,6 +26,6 @@
 
   &__unique-coverage-percentage {
     line-height: 24px;
-    color: map-get($data-visualization, build-cover);
+    color: map-get($data-visualization, coverage);
   }
 }
