EPMDJ-5236: Implement the Tests Execution bar component. Change layout
Issue: EPMDJ-5236

--- a/src/common/style-guide/_colors.scss
+++ b/src/common/style-guide/_colors.scss
@@ -51,4 +51,6 @@ $data-visualization: (
   overlapping: #4f8ac9,
   scope-cover: #aed4fd,
   saved-time: #67d5b5,
+  auto: #d599ff,
+  manual: #88e2f3,
 );
