EPMDJ-5504: Update the display of baseline information
Issue: EPMDJ-5504

--- a/src/pages/agent-full-page/build-list/build-list.module.scss
+++ b/src/pages/agent-full-page/build-list/build-list.module.scss
@@ -22,9 +22,18 @@
   }
 
   &__name-cell {
+    display: flex;
+    align-items: center;
+    gap: 8px;
     color: map-get($primary-blue, default);
-    cursor: pointer;
     font-family: $semibold-font;
+    cursor: pointer;
+  }
+
+  &__baseline-flag {
+    display: flex;
+    align-items: center;
+    color: map-get($monochrome, default);
   }
 
   &__header-cell {
