--- a/src/pages/agent-full-page/dashboard/sections/coverage-section/coverage-section.module.scss
+++ b/src/pages/agent-full-page/dashboard/sections/coverage-section/coverage-section.module.scss
@@ -14,4 +14,15 @@
     align-items: center;
     flex-wrap: wrap;
   }
+
+  &__bar-tooltip {
+    position: relative;
+  }
+
+  &__baseline-build {
+    position: absolute;
+    width: 108px;
+    height: 1px;
+    border-top: 1px dashed map-get($monochrome, shade);
+  }
 }
