EPMDJ-5392: Integrate new Ui-kit tables
Issue: EPMDJ-5392

--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/table/table-row.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/table/table-row.module.scss
@@ -1,8 +1,9 @@
 @import '~common/style-guide/index';
 
-.table-row {
+.packages-tree-table-row {
   align-items: center;
   min-height: 40px;
+  border-bottom: 1px solid map-get($monochrome, medium-tint);
 
   &__table-row-cell {
     padding: 0 16px;
