--- a/src/modules/tests-to-run/tests-to-run-list/tests-to-run-list.module.scss
+++ b/src/modules/tests-to-run/tests-to-run-list/tests-to-run-list.module.scss
@@ -1,11 +1,9 @@
 @import '~common/style-guide/index';
 
 .tests-to-run-list {
-  display: grid;
-  grid-template-rows: repeat(3, max-content);
+  display: flex;
+  flex-direction: column;
   gap: 16px;
-  width: 100%;
-  height: 100%;
 
   &__bar-title {
     height: 24px;
