--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/table/default-header-cell.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/table/default-header-cell.module.scss
@@ -1,6 +1,8 @@
 @import '~common/style-guide/index';
 
 .default-header-cell {
+  position: relative;
   display: inline-flex;
-  gap: 4px;
+  align-items: center;
+  cursor: pointer;
 }
