EPMDJ-5796: Updare table cells styles
Issue: EPMDJ-5796, EPMDJ-5392

--- a/src/components/cells/coverage-cell/coverage-cell.module.scss
+++ b/src/components/cells/coverage-cell/coverage-cell.module.scss
@@ -1,6 +1,8 @@
 @import '~common/style-guide/index';
 
 .coverage-cell {
+  line-height: 64px;
+
   &__coverage-icon {
     display: flex;
     align-items: center;
