--- a/src/modules/tests-to-run/tests-to-run-list/tests-to-run-list.module.scss
+++ b/src/modules/tests-to-run/tests-to-run-list/tests-to-run-list.module.scss
@@ -21,6 +21,10 @@
     line-height: 32px;
   }
 
+  &__state-cell {
+    line-height: 64px;
+  }
+
   &__done {
     font-family: $semibold-font;
     color: map-get($green, default);
