--- a/src/pages/agent-full-page/build-list/build-list.module.scss
+++ b/src/pages/agent-full-page/build-list/build-list.module.scss
@@ -28,6 +28,7 @@
     height: 48px;
     color: map-get($primary-blue, default);
     font-family: $semibold-font;
+    font-size: 14px;
     cursor: pointer;
   }
 
