EPMDJ-5799: Update baseline flag colors
Issue: EPMDJ-5799

--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/coverage-plugin-header.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/coverage-plugin-header.module.scss
@@ -51,12 +51,11 @@
   &__flag-wrapper {
     display: flex;
     margin-left: 8px;
+    color: map-get($monochrome, default);
 
-    &--type {
-      &--active-build {
-        color: map-get($primary-blue, default);
-        cursor: pointer;
-      }
+    &--active {
+      color: map-get($primary-blue, default);
+      cursor: pointer;
     }
   }
 
