--- a/src/modules/breadcrumbs/breadcrumbs.module.scss
+++ b/src/modules/breadcrumbs/breadcrumbs.module.scss
@@ -14,6 +14,12 @@
   }
 
   &__crumb {
+    display: inline-block;
+    max-width: 160px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: middle;
     color: map-get($primary-blue, default);
     font-size: 12px;
     font-family: $semibold-font;
