--- a/src/pages/agent-full-page/dashboard/sections/coverage-section/coverage-section.module.scss
+++ b/src/pages/agent-full-page/dashboard/sections/coverage-section/coverage-section.module.scss
@@ -10,9 +10,9 @@
   }
 
   &__build-info {
-    display: flex;
+    display: grid;
+    grid-template-columns: max-content 1fr;
     align-items: center;
-    flex-wrap: wrap;
   }
 
   &__bar-tooltip {
