EPMDJ-2171: Add Spinner while registering. Update error message
Issue: EPMDJ-2171

--- a/src/components/wizard/wizard.module.scss
+++ b/src/components/wizard/wizard.module.scss
@@ -15,4 +15,10 @@
   &__previous-button {
     margin-right: 16px;
   }
+
+  &__white-spinner {
+    & > div::after {
+      background-color: map-get($monochrome, white);
+    }
+  }
 }
