--- a/src/components/plugin-list-entry/plugin-list-entry.module.scss
+++ b/src/components/plugin-list-entry/plugin-list-entry.module.scss
@@ -4,6 +4,10 @@
   border-bottom: 1px solid map-get($monochrome, medium-tint);
   cursor: pointer;
 
+  &:first-child {
+    border-top: 1px solid map-get($monochrome, medium-tint);
+  }
+
   &:hover {
     background-color: map-get($monochrome, light-tint);
   }
