EPMDJ-5796: Update tables font size
Issue: EPMDJ-5796

--- a/src/pages/agent-full-page/coverage-plugin/scope/scopes-list/scopes-list.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scopes-list/scopes-list.module.scss
@@ -111,6 +111,7 @@
   &__test-type-test-count {
     font-size: 12px;
     line-height: 20px;
+    text-align: right;
     color: map-get($monochrome, default);
     font-family: $regular-font;
   }
