EPMDJ-5841: Update build name overflow rules
Issue: EPMDJ-5841

--- a/src/modules/breadcrumbs/breadcrumbs.module.scss
+++ b/src/modules/breadcrumbs/breadcrumbs.module.scss
@@ -20,8 +20,8 @@
     color: map-get($monochrome, default);
   }
 
-  :not(:last-child) {
-    &:after {
+  :not(:first-child) {
+    &:before {
       padding: 0 8px;
       color: map-get($monochrome, default);
       content: '/';
