--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/coverage-plugin-header.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/coverage-plugin-header.module.scss
@@ -44,7 +44,7 @@
 
   &__baseline-panel {
     display: grid;
-    grid-template-columns: max-content minmax(64px, auto);
+    grid-template-columns: max-content minmax(64px, 60%);
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 8px;
     padding-left: 24px;
