--- a/src/app.scss
+++ b/src/app.scss
@@ -31,20 +31,55 @@ $spacers: (
   10: $spacer * 10,
 );
 
+$font-sizes: (12, 14, 16, 18, 20, 22, 24, 26, 28, 30);
+
 @import '../node_modules/bootstrap/scss/mixins/breakpoints';
+@import '../node_modules/bootstrap/scss/mixins/text-truncate';
+@import '../node_modules/bootstrap/scss/mixins/text-emphasis';
+@import '../node_modules/bootstrap/scss/mixins/hover';
+@import '../node_modules/bootstrap/scss/mixins/deprecate';
+@import '../node_modules/bootstrap/scss/mixins/text-hide';
 
 @import '../node_modules/bootstrap/scss/utilities/align';
 @import '../node_modules/bootstrap/scss/utilities/display';
 @import '../node_modules/bootstrap/scss/utilities/flex';
 @import '../node_modules/bootstrap/scss/utilities/sizing';
 @import '../node_modules/bootstrap/scss/utilities/spacing';
+@import '../node_modules/bootstrap/scss/utilities/text';
 
 @import '../node_modules/bootstrap/scss/bootstrap-grid';
 
-@import './common/style-guide/colors';
+@import './common/style-guide';
 
 .container-fluid {
   padding: 0;
+}
+
+.bold {
+  font-family: $semibold-font !important;
+}
+.light {
+  font-family: $light-font !important;
+}
+.regular {
+  font-family: $regular-font !important;
+}
+
+@each $font in $font-sizes {
+  .fs-#{$font} {
+    font-size: #{$font}px;
+  }
+}
+@each $size in $font-sizes {
+  .lh-#{$size} {
+    line-height: #{$size}px;
+  }
+}
+
+@each $size, $height in $spacers {
+  .h-#{$size*4}px {
+    height: $height !important;
+  }
 }
 
 @each $size, $gap in $spacers {
