EPMDJ-5977: Update tooltips in t2r header and time-saved graph
Issue: EPMDJ-5977

--- a/src/modules/tests-to-run/tests-to-run-list/bar-chart/bar-chart.module.scss
+++ b/src/modules/tests-to-run/tests-to-run-list/bar-chart/bar-chart.module.scss
@@ -101,13 +101,18 @@
         }
       }
 
-      &--duration {
+      &--all-tests-done-duration {
         background: map-get($data-visualization, coverage);
         opacity: 0.5;
 
         &:hover {
           opacity: 1;
         }
+      }
+
+      &--duration {
+        background: map-get($data-visualization, coverage);
+        opacity: 0.5;
       }
     }
   }
